Clean up bundle info page building

--- a/src/Tools/Scripts/bundle_asset_builder/info.html
+++ b/src/Tools/Scripts/bundle_asset_builder/info.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>%TITLE%</title>
+	<title>{TITLE}</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -11,12 +11,15 @@
 </head>
 <body>
 	<div class="content">
-		<h1>%TITLE%</h1>
+		<h1>{TITLE}</h1>
 		<p>Included in this bundle:</p>
 		<ul>
-			%ITEMS%
+			{ITEMS}
 		</ul>
-		<button onclick="myApi.BuyBundleFromJS('%SKU_ID%')">Buy (%PRICE% G)</button>
+	</div>
+	<div class="buttons content">
+		<span class="price">{PRICE} G</span>
+		<button onclick="myApi.BuyBundleFromJS('{SKU_ID}')">Buy Now!</button>
 	</div>
 </body>
 </html>
